# AutonomousDialogAgent4AugmentedReality

./: .env  .gitignore  README.md  agent_cli.py  agent_fastapi.py  agent_server.py  agent_streamlit.py  chain_setup.py  chain_setup_llama.py  finetuning-SFTTrainer.py  lego_client.py  lego_streamlit.py  requirements.txt
.streamlit/: config.toml  secrets.toml
AR_app/: README.md
LEGO_data_simulation/: conversation_generation.py  create_dataset_from_generated_conversations.py  obtain_conversation_from_llama.ipynb  obtain_conversation_from_openai.ipynb  teach_data_exploration.ipynb
LEGO_dialogue_agent_llama2/: chain_setup_llama.py  chain_setup_llama_teach.py  chain_setup_llama_util.py  convert_llama_weights_to_hf.py  evaluation.py  evaluation_agent.py  evaluation_agent——0.py  evaluation_pipeline.py  fine-tuning-llama-2-7b-on-custom-dataset.ipynb  finetune.py  finetuning-instruction.py  finetuning.py  langchain_llama2.py  llama-2-70b-chat-agent.ipynb  llama-2-chat-agent-evaluation.ipynb  llama-2-chat-agent-inference.ipynb  llama2-evaluation.ipynb  llama2-finetune-instruction.ipynb  llama2-finetune.ipynb  utils.py
LEGO_dialogue_agent_openai/: .gitignore  README.md  __init__.py  agent_cli.py  agent_lego_api.py  agent_streamlit.py  chain_setup.py  pyproject.toml  requirements.txt  setup.py
LEGO_dialogue_agent_openai/tools_wrappers/: __init__.py  events_api_wrapper.py  lego_api_wrapper.py  lego_api_wrapper_da_request.py  lego_app_simulated_client.py  lego_app_simulated_client_request.py  lego_function_description.json  vr2gather_api_wrapper.py
LEGO_vlm/: README.md  (+2 more)
(+17 files in other folders)
